# lamor15_yellow

./: README.md  strands_rviz.rviz
circle_detection/doc/: circlecode-batch-change-inner-size.sh  circlecode-batch.sh  circlecode-batch4.sh
circle_detection/include/: FindCircle.h
circle_detection/launch/: multi_cam_circle_detection.launch
circle_detection/src/: CTransformation.cpp  FindCircle.cpp
controller/: CMakeLists.txt  controller_robot.launch  package.xml
controller/scripts/: controller_start.sh
controller/src/: controller.cpp  controller.hpp
conversate/: CMakeLists.txt  package.xml
conversate/src/: conversate.cpp
facts/: CMakeLists.txt  package.xml
facts/src/: tellFacts.py  tellFacts2.py  tellFacts3.py
facts/srv/: TellFacts.srv
lamor_bringup/launch/: lamor_navigation.launch  lamor_sim_navigation.launch
lamor_bringup/resources/: betty_bl.pgm  betty_bl.yaml
lamor_bringup/scripts/: robot_start.sh  sim_start.sh
random_walker/: CMakeLists.txt  package.xml  package.xml~
random_walker/src/: random_walker.py  random_walker.py~
talker/: CMakeLists.txt  package.xml
talker/src/: talker.cpp  talker.hpp
weather/: CMakeLists.txt  package.xml  weather.py
weather/src/: tell_weather.py
weather/srv/: TellWeather.srv
